Add Java 11 support for build